--- a/web/themes/custom/barrierefrei/scss/main.scss
+++ b/web/themes/custom/barrierefrei/scss/main.scss
@@ -23,11 +23,11 @@ $input-shadow: none;
 body {
 }
 
-.view-user-admin-people .views-row {
+.view-people .views-row {
   width: 50%;
   float: left;
 }
-.view-user-admin-people .views-row:nth-child(odd) {
+.view-people .views-row:nth-child(odd) {
   clear: left;
 }
 
