--- a/web/themes/custom/barrierefrei/templates/user/user.html.twig
+++ b/web/themes/custom/barrierefrei/templates/user/user.html.twig
@@ -22,9 +22,10 @@
   </figure>
   <div class="media-content">
     <div class="content">
+      <h3>
+        {{ user.displayname }}
+      </h3>
       <p>
-        <strong>{{ user.displayname }}</strong>
-        <br>
         {{ content.field_function }}
       </p>
     </div>
