--- a/web/themes/custom/barrierefrei/scss/main.scss
+++ b/web/themes/custom/barrierefrei/scss/main.scss
@@ -31,6 +31,11 @@ body {
   clear: left;
   margin-bottom: 2em;
 }
+.view-articles .views-row {
+  width: 50%;
+  float: left;
+  padding-right: 1em;
+}
 
 .media-content {
   margin-top: 1em;
