--- a/web/themes/custom/barrierefrei/templates/layouts/page.html.twig
+++ b/web/themes/custom/barrierefrei/templates/layouts/page.html.twig
@@ -29,7 +29,7 @@
             <div class="field is-grouped">
               <p class="control">
                 <a class="button is-primary"
-                   href="{{ base_path }}/user/login">
+                   href="{{ path('<front>') }}/user/login">
                   <span>Login</span>
                 </a>
               </p>
